--- a/dockers/graphqlapi/package.json
+++ b/dockers/graphqlapi/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "node app.js "
+    "start": "node app.js "
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apollo/server": "^4.11.0",
     "@opensearch-project/opensearch": "^2.12.0",
+    "apollo-server-core": "^3.13.0",
     "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
     "nodemon": "^3.1.7"
